--- a/WebApplicationDevelopmentHW1-main/res/css/styleAP.css
+++ b/WebApplicationDevelopmentHW1-main/res/css/styleAP.css
@@ -1,5 +1,3 @@
-
-
 button {
     background-color: #0026ff;
     width: 60%;
@@ -30,7 +28,6 @@ button:hover {
     margin-right: auto;
     margin-left: auto;
     margin-top: 10%;
-    background-color: lightgrey;
 }
 
 .link:hover {
@@ -44,18 +41,43 @@ body {
 }
 
 header {
+    padding: 10px;
+    border-radius: 25px;
+    height: 75px;
+    width: 97.5%;
+    background-color: lightcyan;
     text-align: left;
+    position: fixed;
+    top: 0px;
+}
+
+footer {
+    padding: 10px;
+    border-radius: 25px;
+    height: 75px;
+    width: 97.5%;
+    background-color: lightcyan;
+    text-align: center;
+    position: fixed;
+    bottom: 0px;
 }
 
 .post {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;  
+    /* width: 40%;
+    height: 50%; */
     border-radius: 25px;
-    width: 30%;
-    height: 40%;
+    width: 40%;
+    height: 350px;
     padding: 75px;
     margin-right: auto;
     margin-left: auto;
     margin-top: 10%;
     background-color: lightcyan;
+    text-align: center;
 }
 
 div small {
@@ -64,4 +86,67 @@ div small {
 
 .post > p {
     font-size: large;
+}
+
+.post > img {
+    max-width: 70%;
+    max-height: 40%;
+}
+
+.sidenav-left {
+    /* height: 100%; */
+    width: 10%; /* Set the width of the sidebar */
+    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 1; /* Stay on top */
+    top: 125; /* Stay at the top */
+    left: 10;
+    bottom: 125;
+    background-color: lightcyan; /* Black */
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 20px;
+    border-radius: 25px;
+}
+
+.sidenav-right {
+    /* height: 100%; */
+    width: 10%; /* Set the width of the sidebar */
+    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 1; /* Stay on top */
+    top: 125; /* Stay at the top */
+    right: 10;
+    bottom: 125;
+    background-color: lightcyan; /* Black */
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 20px;
+    border-radius: 25px;
+}
+
+.dropimg {
+    cursor: pointer;
+}
+
+.dropdown {
+    float:right;
+    position: relative;
+    display: inline-block;
+}
+
+.user-info {
+    display: none;
+    position: absolute;
+    background-color: darkgray;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.user-info p {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;  
+}
+
+.show {
+    display: block;
 }
