--- a/WebApplicationDevelopmentHW1-main/res/css/styleL.css
+++ b/WebApplicationDevelopmentHW1-main/res/css/styleL.css
@@ -36,3 +36,33 @@ button:hover {
 .link:hover {
     color: green;
 }
+
+.dropimg {
+    cursor: pointer;
+}
+
+.dropdown {
+    float:right;
+    position: relative;
+    display: inline-block;
+}
+
+.user-info {
+    display: none;
+    position: absolute;
+    background-color: darkgray;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.user-info p {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;  
+}
+
+.show {
+    display: block;
+}
